fix: fix bug style gap on activity page reviews

--- a/pages/activity/[uuid]/activity.module.scss
+++ b/pages/activity/[uuid]/activity.module.scss
@@ -92,7 +92,7 @@
   }
 
   .servicesSection {
-    @include flex-container(column, $align: center);
+    @include flex-container(column, $align: center, $gap: 40px);
 
     background-color: white;
     box-sizing: border-box;
@@ -174,12 +174,7 @@
             animation-duration: 0.55s;
           }
         }
-    }
-  
-
-      
-
-        
+    }  
       }
     }
 
@@ -224,7 +219,6 @@
           }
         }
       }
-      margin: 80px 0 0 0;
 
       .reviewList {
         @include flex-container(column, $justify: space-between, $gap: 10px);
@@ -374,7 +368,7 @@
     }
 
     .servicesSection {
-      @include flex-container(column, $align: stretch, $gap: 20%);
+      @include flex-container(column, $align: stretch, $gap: 40px);
       background-color: white;
       padding: 0 80px 80px;
 
@@ -439,7 +433,6 @@
         border-radius: 4px;
         padding: 50px;
         width: auto;
-        margin: 80px 0 0 0;
 
         .reviewTitle {
           color: rgba(7, 45, 62, 0.568);
